--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,30 @@ body {
 .linkdec1:hover .linkdec2 {
   color: black !important;
 }
+
+#aboutUs {
+  height: 100vh;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
