--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: visible;
 }
 
 .nav-link {
@@ -58,8 +58,9 @@ body {
 }
 
 #aboutUs {
-  max-height: 100vh;
+  height: auto;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .swiper {
@@ -84,4 +85,8 @@ body {
 #contact {
   background-color: #3d3d3b;
   color: #ffffff;
+}
+
+#aboutUs img {
+  display: none;
 }
